Improved travel classification algorithm and allowed to configure settings via UI